@@ -1,3 +1,8 @@
+2000-08-26  Kevin Buettner  <kevinb@redhat.com>
+
+	* gdbserver/gdbreplay.c (main): Protoize.
+	* gdbserver/server.c (start_inferior, main): Protoize.
+
 2000-08-26  Stephane Carrez  <Stephane.Carrez@worldnet.fr>
 
 	* m68hc11-tdep.c (m68hc11_register_names): Update name of registers.
